   with a button in the UI to retrieve the full output.
 - Add new clarification handler role.
 - Reduce cost of the hash function to handle large amounts of accounts when
   generating or storing passwords.
 - Improve API action to add submission to adhere to the CCS spec.
 - Add API action to create clarification following CCS spec.


Version 7.3.2 - 23 November 2020
--------------------------------
 - Be more tolerant of empty lines in restapi.secret.
 - Fix team manual build failure with recent rst2pdf versions.
 - Update URL for imports from ICPC CMS.
 - Fix team count on jury contest overview screen.
 - Truncate output for sample runs on team pages.
 - Fix compatibility with MySQL 8.x.

Version 7.3.1 - 10 November 2020
--------------------------------
 - Fix chroot install on Ubuntu 20.04.
 - Fix results.hml and results.tsv output.
 - Fix race condition in scoreboard related to a Doctrine bug.
 - Fix having fresh data for scheduling repeated rejudgings.
 - Fix clarification filter buttons when not using queues.
 - Fix database user creation for MySQL >= 8.0.
 - Fix warning about DataTables initialization on judgehosts page.
 - Documentation improvements.


Version 7.3.0 - 26 June 2020
----------------------------
 - Move specification of database configuration out of database and into
   a YAML file. Also show select boxes when appropriate.
 - Rename team.externalid to team.icpcid, since it is not an external ID in
   the sense the other ones are.
 - Add team display name support.
 - Add support for importing teams, organizations and groups using JSON.
 - Add script dj_judgehost_cleanup for maintenance on judgehosts.
 - Team manual source is now RestructeredText.
 - Log out an active user whose password is changed, and updates to the
   roles of a logged in user are effective immediately.
 - Allow to "delete" testcases even with associated judgings.
 - Fix permissions on webapp/var/* by using group setsid bit.