@@ -34,6 +34,7 @@ Version 8.0.0 - DEV
    generating or storing passwords.
  - Improve API action to add submission to adhere to the CCS spec.
  - Add API action to create clarification following CCS spec.
+ - Add support for showing (pending) awards on the scoreboard. Thanks @shuibinlong!
 
 
 Version 7.3.2 - 23 November 2020
